--- a/app/src/main/res/drawable/bg_play_category_pop.xml
+++ b/app/src/main/res/drawable/bg_play_category_pop.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/color_33131932_33414655" />
-    <corners android:radius="10dp" />
+    <solid android:color="@color/color_bbbbbb_ffffff" />
+    <corners android:radius="4dp" />
 </shape>
