--- a/app/src/main/res/layout/fragment_bet_record.xml
+++ b/app/src/main/res/layout/fragment_bet_record.xml
@@ -22,10 +22,7 @@
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent">
 
-        <View
-            android:id="@+id/v_statusbar"
-            android:layout_width="match_parent"
-            android:layout_height="0dp" />
+        <include layout="@layout/view_status_bar" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/toolBar"
