[Modify] 注單紀錄圖檔資源和色碼調整

--- a/app/src/main/res/drawable/bg_square_shape_2dp_gray.xml
+++ b/app/src/main/res/drawable/bg_square_shape_2dp_gray.xml
@@ -3,5 +3,5 @@
     android:shape="rectangle">
     <corners android:radius="2dp"/>
     <solid
-        android:color="@color/color_F4F4F4" />
+        android:color="@color/color_336C7BA8_F4F4F4" />
 </shape>
