--- a/app/src/main/res/drawable/bg_shape_top_8dp_blue_stroke_no_bottom_stroke.xml
+++ b/app/src/main/res/drawable/bg_shape_top_8dp_blue_stroke_no_bottom_stroke.xml
@@ -8,10 +8,10 @@
         <corners
             android:topLeftRadius="8dp"
             android:topRightRadius="8dp" />
-        <solid android:color="@color/color_F2F9FF" />
+        <solid android:color="@color/color_131932_F3F9FF" />
         <stroke
             android:width="1dp"
-            android:color="@color/color_D3DEF5" />
+            android:color="@color/color_2B3859_E3E8EE" />
     </shape>
 </item>
 </layer-list>
