--- a/app/src/main/res/layout/content_match_record.xml
+++ b/app/src/main/res/layout/content_match_record.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
+        app:cardBackgroundColor="@color/color_80334266_E3E8EE"
         app:cardCornerRadius="8dp"
         app:cardElevation="0dp">
 
@@ -99,7 +100,7 @@
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="9dp"
                 android:layout_marginBottom="6dp"
-                android:background="@color/color_E8EFFD"
+                android:background="@color/color_2B3859_E3E8EE"
                 app:layout_constraintTop_toBottomOf="@+id/leagueContainer" />
 
             <LinearLayout
