--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -146,6 +146,8 @@
     <color name="color_DCB345_ECCD86">@color/color_DCB345</color>
     <color name="color_131932_F0F5FA">@color/color_131932</color>
     <color name="color_202541_FFFFFF">@color/color_202541</color>
+    <color name="color_131932_F3F9FF">@color/color_131932</color>
+    <color name="color_336C7BA8_F4F4F4">@color/color_336C7BA8</color>
     <!--endregion 新UI 日夜間色系-->
     <!--沉浸式状态栏颜色处理-->
     <color name="color_232C4F_FFFFFF">@color/color_232C4F</color>
