--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -358,6 +358,7 @@
     <color name="color_535D76">#535D76</color>
     <color name="color_E3E8EE">#E3E8EE</color>
     <color name="color_6C7BA8">#6C7BA8</color>
+    <color name="color_336C7BA8">#336C7BA8</color>
     <color name="color_A5AABF">#A5AABF</color>
     <color name="color_C4D0DE">#C4D0DE</color>
     <color name="color_DAE7F6">#DAE7F6</color>
@@ -454,6 +455,8 @@
     <color name="color_131932_F0F5FA">@color/color_F0F5FA</color>
     <color name="color_202541_FFFFFF">@color/color_FFFFFF</color>
     <color name="color_33131932_33414655">@color/color_33414655</color>
+    <color name="color_131932_F3F9FF">@color/color_F3F9FF</color>
+    <color name="color_336C7BA8_F4F4F4">@color/color_F4F4F4</color>
     <!--endregion 新UI 日夜間色系-->
 
     <color name="color_1E6C7BA8">#1e6c7ba8</color>
