--- a/app/src/main/res/layout/item_match_receipt.xml
+++ b/app/src/main/res/layout/item_match_receipt.xml
@@ -22,6 +22,7 @@
             android:layout_height="match_parent"
             app:cardCornerRadius="@dimen/margin_8"
             app:cardElevation="0dp"
+            app:cardBackgroundColor="@color/color_80334266_E3E8EE"
             android:layout_marginHorizontal="@dimen/margin_14"
             android:layout_marginBottom="@dimen/margin_14">
 
@@ -57,6 +58,13 @@
 <!--                        android:layout_marginStart="@dimen/margin_4"/>-->
 <!--                </LinearLayout>-->
 
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/guideline"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_percent="0.60" />
+
                 <TextView
                     android:id="@+id/tv_bet_status_single"
                     android:layout_width="wrap_content"
@@ -69,19 +77,18 @@
                     android:visibility="visible"
                     android:drawablePadding="6dp"
                     tools:drawableStart="@drawable/ic_bet_check_tip"
-                    tools:text="已确认"
+                    tools:text="@string/bet_info_add_bet_success"
                     tools:textColor="@color/color_1D9F51_1D9F51" />
 
                 <TextView
                     android:id="@+id/tv_match_type"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:textColor="@color/color_FFFFFF_414655"
                     android:textSize="@dimen/textSize12sp"
                     android:layout_marginTop="10dp"
                     android:layout_marginStart="@dimen/margin_10"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0"
+                    app:layout_constraintEnd_toEndOf="@+id/guideline"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/topContainer"
                     tools:text="让球" />
