--- a/app/src/main/res/layout/content_parlay_match.xml
+++ b/app/src/main/res/layout/content_parlay_match.xml
@@ -83,12 +83,14 @@
 
         <TextView
             android:id="@+id/title_team_name_parlay"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:layout_marginEnd="23dp"
             android:textColor="@color/color_9BB3D9_535D76"
             android:textSize="@dimen/textSize14sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/viewLeftLine"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="密尔沃基雄鹿 VS 亚特兰大老鹰" />
