[Modify] 調整注單/注單收據色碼

--- a/app/src/main/res/drawable/bg_gradient_bet_total.xml
+++ b/app/src/main/res/drawable/bg_gradient_bet_total.xml
@@ -4,6 +4,6 @@
     <gradient
         android:angle="0"
         android:endColor="@color/color_202541_FFFFFF"
-        android:startColor="@color/color_FAFCFF"
+        android:startColor="@color/color_202541_FAFCFF"
         android:type="linear" />
 </shape>
