--- a/app/src/main/res/drawable/bg_bet_hint_no_top_stroke.xml
+++ b/app/src/main/res/drawable/bg_bet_hint_no_top_stroke.xml
@@ -11,7 +11,7 @@
             <solid android:color="@color/color_202541_FFFFFF" />
             <stroke
                 android:width="1dp"
-                android:color="@color/color_D3DEF5" />
+                android:color="@color/color_80334266_E3E8EE" />
         </shape>
     </item>
 </layer-list>
