--- a/app/src/main/res/layout/content_parlay_record.xml
+++ b/app/src/main/res/layout/content_parlay_record.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
+        app:cardBackgroundColor="@color/color_80334266_E3E8EE"
         app:cardCornerRadius="8dp"
         app:cardElevation="0dp">
 
