--- a/app/src/main/res/layout/activity_account_history_log.xml
+++ b/app/src/main/res/layout/activity_account_history_log.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/exo_white"
+        android:textColor="@color/exo_white"
         android:orientation="vertical"
         android:paddingBottom="20dp">
         <org.cxct.sportlottery.ui.component.DateRangeSearchNewView
