--- a/app/src/main/res/layout/dialog_register_success.xml
+++ b/app/src/main/res/layout/dialog_register_success.xml
@@ -6,8 +6,8 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_margin="20dp"
-    app:cardBackgroundColor="@color/color_191919_FCFCFC"
-    app:cardCornerRadius="16dp"
+    app:cardBackgroundColor="@color/color_bbbbbb_ffffff"
+    app:cardCornerRadius="8dp"
     app:cardElevation="0dp"
     tools:context="org.cxct.sportlottery.ui.common.CustomAlertDialog">
 
@@ -15,18 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:minWidth="300dp"
         android:orientation="vertical">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:id="@+id/ivSuccess"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_icon_success"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="@dimen/margin_30"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
             android:id="@+id/tvTitle"
@@ -34,25 +23,26 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_marginTop="@dimen/margin_20"
-            android:textColor="@color/color_CCCCCC_000000"
-            android:textSize="@dimen/textSize20sp"
+            android:textColor="@color/color_FFFFFF_414655"
+            android:textSize="@dimen/textSize18sp"
             android:textStyle="bold"
             android:text="@string/register_success"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ivSuccess" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tvJump"
             android:text="@string/register_jump"
-            android:textColor="@color/color_939393_333333"
-            android:textSize="@dimen/textSize12sp"
+            android:textColor="@color/color_6C7BA8_A7B2C4"
+            android:textSize="@dimen/textSize14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvTitle"
-            android:layout_marginTop="@dimen/margin_24"/>
+            android:layout_marginTop="@dimen/margin_14" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -61,29 +51,38 @@
             android:textColor="@color/color_317FFF_0760D4"
             android:textSize="@dimen/textSize12sp"
             app:layout_constraintStart_toEndOf="@+id/tvJump"
-            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
-            android:layout_marginTop="@dimen/margin_24"/>
+            app:layout_constraintTop_toTopOf="@+id/tvJump"
+            app:layout_constraintBottom_toBottomOf="@+id/tvJump" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:id="@+id/ivSuccess"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_icon_success"
+            android:layout_marginTop="@dimen/margin_24"
+            app:layout_constraintTop_toBottomOf="@+id/tvJump"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="130dp"
-            android:background="@color/color_141414_F3F4F5"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="@dimen/margin_30"
+            android:layout_marginTop="@dimen/margin_20"
+            android:layout_marginBottom="20dp"
             android:orientation="vertical"
-            app:layout_constraintTop_toBottomOf="@+id/tvJump">
+            app:layout_constraintTop_toBottomOf="@+id/ivSuccess"
+            app:layout_constraintBottom_toBottomOf="parent">
 
 
             <Button
                 android:id="@+id/btnRecharge"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="match_parent"
-                android:layout_height="46dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="68dp"
-                android:layout_marginRight="68dp"
-                android:background="@drawable/bg_radius_20_button_dusk"
+                android:layout_height="45dp"
+                android:layout_marginHorizontal="20dp"
+                android:background="@drawable/button_radius_8_bet_button"
                 android:enabled="true"
                 android:text="@string/register_recharge_now"
                 android:textColor="@android:color/white"
@@ -96,10 +95,12 @@
                 android:id="@+id/tvVisitFirst"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:padding="4dp"
+                android:visibility="visible"
                 android:layout_gravity="center"
                 android:text="@string/visit_first"
-                android:textColor="@color/color_909090_666666"
+                android:textColor="@color/color_FFFFFF_535D76"
                 app:layout_constraintBaseline_toBaselineOf="@+id/btn_visit_first"
                 android:textSize="@dimen/textSize12sp" />
         </LinearLayout>
