--- a/app/src/main/res/layout/fragment_main_left.xml
+++ b/app/src/main/res/layout/fragment_main_left.xml
@@ -82,7 +82,8 @@
                         android:paddingHorizontal="@dimen/margin_4"
                         android:text="2"
                         android:textColor="@color/color_FFFFFF"
-                        android:textSize="@dimen/textSize12sp" />
+                        android:textSize="@dimen/textSize12sp"
+                        android:visibility="gone" />
 
                     <androidx.legacy.widget.Space
                         android:layout_width="0dp"
@@ -465,9 +466,11 @@
 
                 <TextView
                     android:id="@+id/tv_affiliate"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:maxWidth="80dp"
+                    android:layout_weight="1"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:layout_marginHorizontal="@dimen/margin_15"
                     android:layout_marginVertical="@dimen/margin_10"
                     android:text="@string/btm_navigation_affiliate"
@@ -482,9 +485,11 @@
 
                 <TextView
                     android:id="@+id/tv_contact"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:maxWidth="80dp"
+                    android:layout_weight="1"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:layout_marginHorizontal="@dimen/margin_15"
                     android:layout_marginVertical="@dimen/margin_10"
                     android:text="@string/contact"
@@ -499,9 +504,11 @@
 
                 <TextView
                     android:id="@+id/tv_about_us"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:maxWidth="80dp"
+                    android:layout_weight="1"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:layout_marginHorizontal="@dimen/margin_15"
                     android:layout_marginVertical="@dimen/margin_10"
                     android:text="@string/about_us"
@@ -516,9 +523,11 @@
 
                 <TextView
                     android:id="@+id/tv_responsible"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:maxWidth="80dp"
+                    android:layout_weight="1"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:layout_marginHorizontal="@dimen/margin_15"
                     android:layout_marginVertical="@dimen/margin_10"
                     android:text="@string/responsible"
@@ -533,9 +542,11 @@
 
                 <TextView
                     android:id="@+id/tv_terms"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:maxWidth="80dp"
+                    android:layout_weight="1"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:layout_marginHorizontal="@dimen/margin_15"
                     android:layout_marginVertical="@dimen/margin_10"
                     android:text="@string/terms_conditions"
@@ -550,9 +561,11 @@
 
                 <TextView
                     android:id="@+id/tv_privacy"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:maxWidth="80dp"
+                    android:layout_weight="1"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:layout_marginHorizontal="@dimen/margin_15"
                     android:layout_marginVertical="@dimen/margin_10"
                     android:text="@string/privacy_policy"
