--- a/app/src/main/res/layout/fragment_self_limit_bet.xml
+++ b/app/src/main/res/layout/fragment_self_limit_bet.xml
@@ -6,10 +6,12 @@
     android:layout_height="match_parent"
     android:background="@color/color_141414_F3F4F5"
     android:orientation="vertical"
-    android:padding="@dimen/margin_14"
+    android:layout_marginLeft="@dimen/margin_14"
+    android:layout_marginRight="@dimen/margin_14"
     tools:context=".ui.feedback.suggest.FeedbackSubmitFragment">
 
     <androidx.cardview.widget.CardView
+        android:layout_marginTop="@dimen/dp_10"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/transparent_black_0"
@@ -148,7 +150,7 @@
             android:id="@+id/tvDot"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/dot"
+
             android:textColor="@color/color_E44438_e44438"
             android:textSize="@dimen/textSize12sp"
             app:layout_constraintStart_toStartOf="parent"
