--- a/app/src/main/res/layout/view_total_record.xml
+++ b/app/src/main/res/layout/view_total_record.xml
@@ -55,6 +55,7 @@
         android:layout_height="wrap_content"
         app:layout_constrainedWidth="true"
         android:layout_marginEnd="15dp"
+        android:textColor="@color/color_E23434"
         android:textSize="@dimen/textSize14sp"
         app:layout_constraintHorizontal_bias="1"
         app:layout_constraintBottom_toBottomOf="parent"
