--- a/app/src/main/res/layout/activity_account_history_log.xml
+++ b/app/src/main/res/layout/activity_account_history_log.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,25 +8,20 @@
     android:orientation="vertical"
     android:background="@color/color_141414_F3F4F5"
     tools:content="org.cxct.sportlottery.ui.finance.RechargeLogFragment">
-    <LinearLayout
+    <org.cxct.sportlottery.ui.component.DateRangeSearchNewView
+        android:id="@+id/date_range_selector"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textColor="@color/exo_white"
-        android:orientation="vertical"
-        android:paddingBottom="20dp">
-        <org.cxct.sportlottery.ui.component.DateRangeSearchNewView
-            android:id="@+id/date_range_selector"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_5"
-            app:layout_constraintTop_toTopOf="parent"
-            app:minusDays="8" />
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:background="@color/color_191919_FCFCFC"
-            app:layout_constraintTop_toBottomOf="@id/date_range_selector">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_20"
+        app:layout_constraintTop_toTopOf="parent"
+        app:minusDays="8" />
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:background="@color/color_191919_FCFCFC"
+        app:layout_constraintTop_toBottomOf="@id/date_range_selector"
+        android:layout_marginTop="@dimen/margin_20">
 
             <org.cxct.sportlottery.ui.component.StatusSpinnerView
                 android:id="@+id/selector_order_status"
@@ -37,16 +32,18 @@
                 app:defaultStatusText="@string/text_account_history_bet"
                 app:listBackground="@drawable/bg_pop_up_arrow"
                 app:layout_constraintTop_toBottomOf="@id/date_range_selector" />
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/margin_36"
-            android:layout_marginLeft="@dimen/margin_10"
-            android:layout_marginTop="@dimen/margin_10"
-            android:layout_marginRight="@dimen/margin_10"
-            android:background="@drawable/bg_square_shape_6dp_gray_deposit_stroke"
-            android:orientation="vertical">
+    </LinearLayout>
+     <LinearLayout
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:layout_marginLeft="@dimen/margin_10"
+         android:layout_marginRight="@dimen/margin_10"
+         android:background="@drawable/bg_square_shape_6dp_gray_deposit_stroke"
+         android:orientation="vertical"
+         android:layout_marginTop="@dimen/margin_10"
+         app:layout_constraintTop_toBottomOf="@id/linearLayout"
+         app:layout_constraintStart_toStartOf="parent"
+         app:layout_constraintEnd_toEndOf="parent">
             <LinearLayout
                 android:id="@+id/rech_log_column"
                 android:layout_width="match_parent"
@@ -115,6 +112,8 @@
                     android:textColor="@color/color_BBBBBB_333333"
                     android:textSize="@dimen/textSize12sp"/>
             </LinearLayout>
+
+
 
                 <com.scwang.smart.refresh.layout.SmartRefreshLayout
                     android:id="@+id/view_refresh"
@@ -189,191 +188,5 @@
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </LinearLayout>
-   <!-- <org.cxct.sportlottery.ui.component.DateRangeSearchNewView
-        android:id="@+id/date_range_selector"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_5"
-        app:layout_constraintTop_toTopOf="parent"
-        app:minusDays="6" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:background="@color/color_191919_FCFCFC"
-        app:layout_constraintTop_toBottomOf="@id/date_range_selector">
-
-        <org.cxct.sportlottery.ui.component.StatusSpinnerView
-            android:id="@+id/selector_order_status"
-            android:layout_width="0dp"
-            android:layout_height="44dp"
-            android:layout_weight="1"
-            android:background="@color/color_191919_FCFCFC"
-            app:defaultStatusText="@string/text_account_history_bet"
-            app:listBackground="@drawable/bg_pop_up_arrow"
-            app:layout_constraintTop_toBottomOf="@id/date_range_selector" />
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_10"
-        android:layout_marginTop="@dimen/margin_10"
-        android:layout_marginRight="@dimen/margin_10"
-        android:background="@drawable/bg_square_shape_6dp_gray_deposit_stroke"
-        android:orientation="vertical">
-        <LinearLayout
-            android:id="@+id/rech_log_column"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_1"
-            android:layout_marginTop="@dimen/margin_1"
-            android:layout_marginRight="@dimen/margin_1"
-            android:background="@drawable/bg_white_top_radius_deposit_10"
-            android:orientation="horizontal"
-            android:paddingVertical="4dp">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:maxLines="2"
-                android:ellipsize="end"
-                android:paddingStart="@dimen/margin_2"
-                android:paddingEnd="@dimen/margin_2"
-                android:text="@string/text_account_history_time"
-                android:textColor="@color/color_BBBBBB_333333"
-                android:textSize="@dimen/textSize12sp"/>
-
-            <TextView
-                android:id="@+id/rech_log_recharge_amount"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:maxLines="2"
-                android:paddingStart="@dimen/margin_2"
-                android:paddingEnd="@dimen/margin_2"
-                android:ellipsize="end"
-                android:text="@string/text_account_history_number"
-                android:textColor="@color/color_BBBBBB_333333"
-                android:textSize="@dimen/textSize12sp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:maxLines="2"
-                android:ellipsize="end"
-                android:paddingStart="@dimen/margin_2"
-                android:paddingEnd="@dimen/margin_2"
-                android:text="@string/text_account_history_amount"
-                android:textColor="@color/color_BBBBBB_333333"
-                android:textSize="@dimen/textSize12sp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:maxLines="2"
-                android:ellipsize="end"
-                android:text="@string/text_account_history_balance"
-                android:paddingStart="@dimen/margin_2"
-                android:paddingEnd="@dimen/margin_2"
-                android:textColor="@color/color_BBBBBB_333333"
-                android:textSize="@dimen/textSize12sp"/>
-        </LinearLayout>
-
-    </LinearLayout>
-
-
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <com.scwang.smart.refresh.layout.SmartRefreshLayout
-
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:srlDragRate="0.3"
-                app:srlEnableLoadMore="true"
-
-                app:srlEnablePureScrollMode="true">
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvlist"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/margin_1"
-                android:layout_marginRight="@dimen/margin_1"
-                android:layout_marginBottom="@dimen/margin_7"
-                android:overScrollMode="never"
-                tools:itemCount="2"
-                tools:listitem="@layout/view_item_recharge_log" />
-
-            <include
-                android:id="@+id/view_no_record"
-                layout="@layout/view_no_record"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/rech_log_column"
-                tools:visibility="gone" />
-            </com.scwang.smart.refresh.layout.SmartRefreshLayout>
-        </FrameLayout>
-
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:id="@+id/layoutCount"
-        android:background="@color/color_191919_FCFCFC"
-        android:layout_gravity="bottom"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:orientation="horizontal">
-
-        <View
-            android:id="@+id/view2"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/color_191919_EEEFF0"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-        <TextView
-            android:id="@+id/tv_total"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/total_bet_number"
-            android:textColor="@color/color_AEAEAE_404040"
-            android:layout_marginStart="15dp"
-            android:textSize="@dimen/textSize14sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/tv_total_number"
-            app:layout_constraintTop_toBottomOf="@+id/view2" />
-
-        <TextView
-            android:id="@+id/tv_total_number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/color_AEAEAE_404040"
-            android:textSize="@dimen/textSize14sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constrainedWidth="true"
-            android:layout_marginEnd="@dimen/margin_16"
-            tools:text="999999" />
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>-->
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
