--- a/app/src/main/res/layout/activity_recharge_log.xml
+++ b/app/src/main/res/layout/activity_recharge_log.xml
@@ -6,7 +6,14 @@
     android:layout_height="match_parent"
     android:background="@color/color_FFFFFF"
     tools:content="org.cxct.sportlottery.ui.finance.RechargeLogFragment">
-
+    <View
+        android:id="@+id/view"
+        android:background="@color/color_E3E8EE"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_10"/>
     <org.cxct.sportlottery.ui.component.DateRangeSearchNewView
         android:id="@+id/date_range_selector"
         android:layout_width="match_parent"
@@ -16,7 +23,7 @@
         app:minusDays="6" />
 
     <LinearLayout
-        android:layout_marginTop="@dimen/margin_20"
+        android:layout_marginTop="@dimen/margin_10"
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="44dp"
