--- a/app/src/main/res/layout/fragment_self_limit_froze.xml
+++ b/app/src/main/res/layout/fragment_self_limit_froze.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/color_F0F5FA"
     android:orientation="vertical"
-    android:padding="@dimen/margin_14"
+    android:layout_margin="@dimen/dp_10"
     tools:context=".ui.feedback.suggest.FeedbackSubmitFragment">
 
     <androidx.cardview.widget.CardView
@@ -156,15 +156,13 @@
         android:id="@+id/btnConfirm"
         android:layout_width="match_parent"
         android:layout_height="@dimen/margin_45"
-        android:layout_gravity="center_vertical"
         android:layout_marginTop="@dimen/margin_10"
         android:layout_marginEnd="@dimen/margin_14"
+        android:layout_marginStart="@dimen/margin_14"
         android:layout_marginBottom="@dimen/margin_6"
         android:background="@drawable/ic_submit"
         android:enabled="false"
         android:gravity="center"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
         android:text="@string/btn_confirm"
         android:textAllCaps="true"
         android:textColor="@color/exo_white"
