--- a/app/src/main/res/layout/fragment_feedback_record_list.xml
+++ b/app/src/main/res/layout/fragment_feedback_record_list.xml
@@ -108,6 +108,7 @@
     </com.scwang.smart.refresh.layout.SmartRefreshLayout>
 
     <ImageView
+        android:visibility="gone"
         android:id="@+id/iv_scroll_to_top"
         android:layout_width="48dp"
         android:layout_height="48dp"
