--- a/app/src/main/res/layout/activity_register_ok.xml
+++ b/app/src/main/res/layout/activity_register_ok.xml
@@ -1260,12 +1260,12 @@
                     android:layout_marginLeft="35dp"
                     android:layout_marginTop="@dimen/margin_20"
                     android:layout_marginRight="35dp"
+                    android:alpha="0.5"
                     android:background="@drawable/ic_submit"
                     android:enabled="false"
                     android:text="@string/next_step"
                     android:textColor="@android:color/white"
-                    android:textSize="@dimen/textSize17sp"
-                    android:alpha="0.5" />
+                    android:textSize="@dimen/textSize17sp" />
             </RelativeLayout>
         </LinearLayout>
 
