--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:contentDescription="@null"
-        android:scaleType="centerCrop"
+        android:background="@color/color_FFFFFF"
+        android:scaleType="fitCenter"
         android:src="@drawable/splash_bg" />
 
     <androidx.cardview.widget.CardView
