--- a/app/src/main/res/layout/item_flipper.xml
+++ b/app/src/main/res/layout/item_flipper.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/tv_marquee"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent"
-    android:clickable="true"
-    android:focusable="true"
-    android:gravity="center_vertical"
-    android:singleLine="true"
-    android:ellipsize="end"
-    android:textColor="@color/color_A36200"
-    android:textSize="@dimen/textSize14sp"
-    android:text="2022世界杯来临，OKBET特邀球届专来讲座" />
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/tv_marquee"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:focusable="true"
+        android:gravity="center_vertical"
+        android:singleLine="true"
+        android:ellipsize="end"
+        android:textColor="@color/color_A36200"
+        android:textSize="@dimen/textSize14sp"
+        android:text="2022世界杯来临，OKBET特邀球届专来讲座" />
+</LinearLayout>
+
