--- a/app/src/main/res/layout/view_toolbar_home.xml
+++ b/app/src/main/res/layout/view_toolbar_home.xml
@@ -42,6 +42,7 @@
         android:id="@+id/btn_login"
         android:layout_width="wrap_content"
         android:layout_height="22dp"
+        android:paddingHorizontal="@dimen/dp_10"
         android:minWidth="64dp"
         android:gravity="center"
         android:layout_marginLeft="@dimen/margin_16"
